# ugit

./: .gitignore  README.md  dachi.file  exit  pyproject.toml
.github/workflows/: ci.yaml
tests/: test_init.py
ugit/: base.py  cli.py  data.py  diff.py
