[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ugit"
version = "1.0.0"
description = "A mini Git implementation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
ugit = "ugit.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]
